--- a/style.css
+++ b/style.css
@@ -2,5 +2,10 @@ body{
     background: #000000;
     font-family: 'Noto-Sans', sans-serif;
     cursor: default;
-    opacity: 0%;
+    color: #000000;
+    padding: 15px;
+}
+.h1{
+    color: #000000;
+    padding: 15px;
 }
